@@ -109,6 +109,11 @@
       <li><a href="rdoc/classes/Roda/RodaPlugins/MailProcessor.html">mail_processor</a>: Adds support for processing emails using the routing tree.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/Mailer.html">mailer</a>: Adds support for sending emails using the routing tree.</li>
     </ul></li>
+    <li>Middleware: <ul>
+      <li><a href="rdoc/classes/Roda/RodaPlugins/DirectCall.html">direct_call</a>: Makes Roda.call skip the middleware stack, allowing more optimization when dispatching routes.</li>
+      <li><a href="rdoc/classes/Roda/RodaPlugins/Middleware.html">middleware</a>: Allows the Roda app to be used as middleware by another app.</li>
+      <li><a href="rdoc/classes/Roda/RodaPlugins/MiddlewareStack.html">middleware_stack</a>: Allows removing middleware and inserting middleware before the end of the stack.</li>
+    </ul></li>
     <li>Other: <ul>
       <li><a href="rdoc/classes/Roda/RodaPlugins/CommonLogger.html">common_logger</a>: Adds support for logging in common log format.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/Csrf.html">csrf</a>: Older CSRF plugin for backwards compatibility using <a href="https://github.com/baldowl/rack_csrf">rack_csrf</a>.</li>
@@ -119,8 +124,6 @@
       <li><a href="rdoc/classes/Roda/RodaPlugins/Heartbeat.html">heartbeat</a>: Adds support for heartbeats.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/IndifferentParams.html">indifferent_params</a>: Adds params method for indifferent parameters.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/JsonParser.html">json_parser</a>: Parses request bodies in JSON format.</li>
-      <li><a href="rdoc/classes/Roda/RodaPlugins/Middleware.html">middleware</a>: Allows the Roda app to be used as middleware by another app.</li>
-      <li><a href="rdoc/classes/Roda/RodaPlugins/MiddlewareStack.html">middleware_stack</a>: Allows removing middleware and inserting middleware before the end of the stack.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/Path.html">path</a>: Adds support for named paths.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/RouteCsrf.html">route_csrf</a>: Recommended CSRF plugin with request-specific tokens and control over where CSRF tokens are checked during routing.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/Sessions.html">sessions</a>: Implements support for encrypted sessions.</li>
